0.64.0
------
1. Add option to not draw border around popupmenus.
2. Harmonize KDE4 & Gtk2 popupmenu overlaps.
3. Slightly changed min width/height of when buttons can be max
   rounded.
   
0.63.0
------
 1. Add '3dfull' to gradient border options. This forces the
    dark, as well as the light, portion to be drawn.
 2. Use a lighter shade for the dark portion of gradient border.
 3. Flat dot for radio buttons.
 4. Option to use button colour for listview headers.
 5. Use KDE4 colors for focus and mouse-over.
 6. Removal of background focus option.
 7. Softer, and much nicer, colouration of selected tab.
 8. Tab mouse over options; top (as before), below, or glow.
 9. Modified defaults:
     Tab mouse-over highlight drawn at the bottom
     Plain slider style
     Align titlebars text in center
10. Add appearance setting for background of flat scrollbar buttons.
11. Add HCY colour space.
12. Use tint and mix color routines from KDE4's KColorUtils.
13. Remove QtCurve's 'inactiveHighlight' option, and use KDE4s setting
    instead.
14. Add option to specify appearance setting of filler part of sliders.
15. Increase number of custom gradients - now matches number of gradient
    config items.
16. When using glow style mouse over, use mouse over colour for arrows.
17. Option to use a thinner groove for scrollbars (only when using flat, or no, buttons).
18. Option to only color sliders on mouse over.
19. Option to round all tabs.
20. Add option to specify menu stripe color.
21. Better tab highlighting.
22. Update gradient preview when change colour space.
23. Don't max/extra round progressbars.
24. Use faded lines for tab and listview header mouse-over.
25. Remove line from KTitleWidget
26. Slightly improve highlight in corner of kwin windows.
27. Align pressed box drwn for checkable icon menuitems better
    with menuitem highlight.
28. Remove 'Custom sunken gradient' setting, as this was not
    actually used.