@@ -791,7 +791,8 @@ typedef struct
                      colorSliderMouseOver,
                      thinSbarGroove,
                      flatSbarButtons,
-                     popupBorder;
+                     popupBorder,
+                     unifySpinBtns;
 #if defined QTC_CONFIG_DIALOG || (defined QT_VERSION && (QT_VERSION >= 0x040000))
     int              titlebarButtons;
     TBCols           titlebarButtonColors;
