@@ -1,8 +1,9 @@
 0.64.0
 ------
 1. Add option to not draw border around popupmenus.
-2. Harmonize KDE4 & Gtk2 popupmenu overlaps.
-3. Slightly changed min width/height of when buttons can be max
+2. Add option to unify spinbuttons.
+3. Harmonize KDE4 & Gtk2 popupmenu overlaps.
+4. Slightly changed min width/height of when buttons can be max
    rounded.
    
 0.63.0
